# ticketAnalyzer

./: .env.example  .gitignore  CORRECTIONS_SUMMARY.md  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260701_a3f7c2d1e8b4_schema_corrections.py
scripts/: review_aliases.py
src/config/: logger.py  settings.py
src/db/: connection.py  create_tables.py  init_db.py  insert.py  models.py
src/etl/: pipeline.py
src/gmail/: auth.py  reader.py
src/ocr/: examples.json  examples.py  unified.py
tests/: test_gmail_reader.py  test_insert.py  test_logging_config.py  test_ocr_unified.py  test_pipeline.py  test_settings.py
